// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextBox should handle events on random button 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-1qatj6x {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.cache-1qatj6x::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1qatj6x::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1qatj6x:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1qatj6x::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1qatj6x:hover,
.cache-1qatj6x:focus {
  border-color: #dbdbdf;
}

.cache-1qatj6x:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1qatj6x::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1qatj6x::-moz-placeholder {
  opacity: 1;
}

.cache-1qatj6x:-ms-input-placeholder {
  opacity: 1;
}

.cache-1qatj6x::placeholder {
  opacity: 1;
}

.cache-3ej5ou {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.cache-3ej5ou:hover,
.cache-3ej5ou:focus-within {
  color: #4a4f62;
}

.cache-3ej5ou>button {
  box-shadow: none!important;
}

.cache-cq3faf {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-cq3faf[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-cq3faf[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1xppsrc {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1xppsrc.cache-1xppsrc {
  vertical-align: middle;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-1qatj6x e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <div
        class="cache-3ej5ou e18bmnpq2"
      >
        <button
          aria-disabled="false"
          class="e1kgqxfn0 cache-cq3faf e7ah3bn0"
          title="Randomize"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-1xppsrc e7ah3bn0"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should handle events on toggleable password 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-1qatj6x {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.cache-1qatj6x::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1qatj6x::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1qatj6x:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1qatj6x::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1qatj6x:hover,
.cache-1qatj6x:focus {
  border-color: #dbdbdf;
}

.cache-1qatj6x:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1qatj6x::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1qatj6x::-moz-placeholder {
  opacity: 1;
}

.cache-1qatj6x:-ms-input-placeholder {
  opacity: 1;
}

.cache-1qatj6x::placeholder {
  opacity: 1;
}

.cache-3ej5ou {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.cache-3ej5ou:hover,
.cache-3ej5ou:focus-within {
  color: #4a4f62;
}

.cache-3ej5ou>button {
  box-shadow: none!important;
}

.cache-cq3faf {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-cq3faf[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-cq3faf[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1xppsrc {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1xppsrc.cache-1xppsrc {
  vertical-align: middle;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-1qatj6x e18bmnpq0"
        name="password"
        type="text"
        value=""
      />
      <div
        class="cache-3ej5ou e18bmnpq2"
      >
        <button
          aria-disabled="false"
          class="e1kgqxfn0 cache-cq3faf e7ah3bn0"
          title="Hide"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-1xppsrc e7ah3bn0"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.83,9L15,12.16C15,12.11 15,12.05 15,12A3,3 0 0,0 12,9C11.94,9 11.89,9 11.83,9M7.53,9.8L9.08,11.35C9.03,11.56 9,11.77 9,12A3,3 0 0,0 12,15C12.22,15 12.44,14.97 12.65,14.92L14.2,16.47C13.53,16.8 12.79,17 12,17A5,5 0 0,1 7,12C7,11.21 7.2,10.47 7.53,9.8M2,4.27L4.28,6.55L4.73,7C3.08,8.3 1.78,10 1,12C2.73,16.39 7,19.5 12,19.5C13.55,19.5 15.03,19.2 16.38,18.66L16.81,19.08L19.73,22L21,20.73L3.27,3M12,7A5,5 0 0,1 17,12C17,12.64 16.87,13.26 16.64,13.82L19.57,16.75C21.07,15.5 22.27,13.86 23,12C21.27,7.61 17,4.5 12,4.5C10.6,4.5 9.26,4.75 8,5.2L10.17,7.35C10.74,7.13 11.35,7 12,7Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-twjxea {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-twjxea::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:hover,
.cache-twjxea:focus {
  border-color: #dbdbdf;
}

.cache-twjxea:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-twjxea::-webkit-input-placeholder {
  opacity: 1;
}

.cache-twjxea::-moz-placeholder {
  opacity: 1;
}

.cache-twjxea:-ms-input-placeholder {
  opacity: 1;
}

.cache-twjxea::placeholder {
  opacity: 1;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-twjxea e18bmnpq0"
        type="text"
        value=""
      />
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly disabled true 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-1jatokv {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #fafafb;
  border-color: #fafafb;
  color: #d4dae7;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1jatokv::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1jatokv::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1jatokv:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1jatokv::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1jatokv:hover,
.cache-1jatokv:focus {
  border-color: #dbdbdf;
}

.cache-1jatokv:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1jatokv::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1jatokv::-moz-placeholder {
  opacity: 1;
}

.cache-1jatokv:-ms-input-placeholder {
  opacity: 1;
}

.cache-1jatokv::placeholder {
  opacity: 1;
}

.cache-1g7upxo {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
  color: #d4dae7;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-1jatokv e18bmnpq0"
        disabled=""
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-1g7upxo e18bmnpq1"
        disabled=""
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly error string 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-1uc52vc {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  border-color: #ef5774;
}

.cache-1uc52vc::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1uc52vc::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1uc52vc:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1uc52vc::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1uc52vc:hover,
.cache-1uc52vc:focus {
  border-color: #dbdbdf;
}

.cache-1uc52vc:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1uc52vc::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1uc52vc::-moz-placeholder {
  opacity: 1;
}

.cache-1uc52vc:-ms-input-placeholder {
  opacity: 1;
}

.cache-1uc52vc::placeholder {
  opacity: 1;
}

.cache-1uc52vc:hover,
.cache-1uc52vc:focus {
  border-color: #ef5774;
}

.cache-1uc52vc:focus {
  box-shadow: 0 0 0 2px rgba(239,87,116,0.25);
  border-color: #ef5774;
}

.cache-14px29 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
  color: #ef5774;
}

.cache-f39kmy {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 56px;
  opacity: 1;
  overflow: visible;
}

.cache-f39kmy.cache-f39kmy {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-1uc52vc e18bmnpq0"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-14px29 e18bmnpq1"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-f39kmy e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      >
        test error
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly label and noTopLabel 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-twjxea {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-twjxea::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:hover,
.cache-twjxea:focus {
  border-color: #dbdbdf;
}

.cache-twjxea:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-twjxea::-webkit-input-placeholder {
  opacity: 1;
}

.cache-twjxea::-moz-placeholder {
  opacity: 1;
}

.cache-twjxea:-ms-input-placeholder {
  opacity: 1;
}

.cache-twjxea::placeholder {
  opacity: 1;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        aria-label="Test"
        autocomplete="on"
        class="cache-twjxea e18bmnpq0"
        type="text"
        value="test"
      />
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly label and noTopLabel 2`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-twjxea {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-twjxea::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-twjxea:hover,
.cache-twjxea:focus {
  border-color: #dbdbdf;
}

.cache-twjxea:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-twjxea::-webkit-input-placeholder {
  opacity: 1;
}

.cache-twjxea::-moz-placeholder {
  opacity: 1;
}

.cache-twjxea:-ms-input-placeholder {
  opacity: 1;
}

.cache-twjxea::placeholder {
  opacity: 1;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-twjxea e18bmnpq0"
        type="text"
        value="test"
      />
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly label and noTopLabel 3`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-1a8mafn {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1a8mafn::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn:hover,
.cache-1a8mafn:focus {
  border-color: #dbdbdf;
}

.cache-1a8mafn:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1a8mafn::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1a8mafn::-moz-placeholder {
  opacity: 1;
}

.cache-1a8mafn:-ms-input-placeholder {
  opacity: 1;
}

.cache-1a8mafn::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-1a8mafn e18bmnpq0"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq1"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly multiline true 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-1cu3khy {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-top: 20px;
  height: initial;
  resize: none;
  padding-top: 8px;
}

.cache-1cu3khy::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1cu3khy::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1cu3khy:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1cu3khy::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1cu3khy:hover,
.cache-1cu3khy:focus {
  border-color: #dbdbdf;
}

.cache-1cu3khy:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1cu3khy::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1cu3khy::-moz-placeholder {
  opacity: 1;
}

.cache-1cu3khy:-ms-input-placeholder {
  opacity: 1;
}

.cache-1cu3khy::placeholder {
  opacity: 1;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <textarea
        autocomplete="on"
        class="cache-1cu3khy e18bmnpq0"
      />
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly required true 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-13ncup3 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 22px;
}

.cache-13ncup3::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-13ncup3::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-13ncup3:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-13ncup3::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-13ncup3:hover,
.cache-13ncup3:focus {
  border-color: #dbdbdf;
}

.cache-13ncup3:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-13ncup3::-webkit-input-placeholder {
  opacity: 1;
}

.cache-13ncup3::-moz-placeholder {
  opacity: 1;
}

.cache-13ncup3:-ms-input-placeholder {
  opacity: 1;
}

.cache-13ncup3::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-1q514ot {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  -webkit-transform: translateY(8px);
  -moz-transform: translateY(8px);
  -ms-transform: translateY(8px);
  transform: translateY(8px);
}

.cache-1q514ot:hover,
.cache-1q514ot:focus-within {
  color: #4a4f62;
}

.cache-1h0xriv {
  fill: #ef5774;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.cache-1h0xriv.cache-1h0xriv {
  vertical-align: middle;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-13ncup3 e18bmnpq0"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq1"
      >
        Test
      </label>
      <div
        class="cache-1q514ot e18bmnpq2"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1h0xriv e7ah3bn0"
          viewBox="0 0 24 24"
        >
          <path
            d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
          />
        </svg>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with ariaControls 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-1ukz7wy {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1ukz7wy::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1ukz7wy::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1ukz7wy:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1ukz7wy::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1ukz7wy:hover,
.cache-1ukz7wy:focus {
  border-color: #dbdbdf;
}

.cache-1ukz7wy:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        aria-controls="test-control"
        aria-labelledby="test-control"
        autocomplete="on"
        class="cache-1ukz7wy e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq1"
        id="test-control"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with basic props 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-1a8mafn {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1a8mafn::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn:hover,
.cache-1a8mafn:focus {
  border-color: #dbdbdf;
}

.cache-1a8mafn:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1a8mafn::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1a8mafn::-moz-placeholder {
  opacity: 1;
}

.cache-1a8mafn:-ms-input-placeholder {
  opacity: 1;
}

.cache-1a8mafn::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-1a8mafn e18bmnpq0"
        id="test"
        placeholder="type..."
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq1"
        for="test"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with defaultValue true 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-1ukz7wy {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1ukz7wy::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1ukz7wy::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1ukz7wy:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1ukz7wy::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1ukz7wy:hover,
.cache-1ukz7wy:focus {
  border-color: #dbdbdf;
}

.cache-1ukz7wy:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-1ukz7wy e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq1"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with edit true 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-1a8mafn {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1a8mafn::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn:hover,
.cache-1a8mafn:focus {
  border-color: #dbdbdf;
}

.cache-1a8mafn:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1a8mafn::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1a8mafn::-moz-placeholder {
  opacity: 1;
}

.cache-1a8mafn:-ms-input-placeholder {
  opacity: 1;
}

.cache-1a8mafn::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-1a8mafn e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq1"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with fillAvailable true 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-1ukz7wy {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1ukz7wy::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1ukz7wy::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1ukz7wy:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1ukz7wy::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1ukz7wy:hover,
.cache-1ukz7wy:focus {
  border-color: #dbdbdf;
}

.cache-1ukz7wy:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-1ukz7wy e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq1"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with generated true 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-1a8mafn {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1a8mafn::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn:hover,
.cache-1a8mafn:focus {
  border-color: #dbdbdf;
}

.cache-1a8mafn:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1a8mafn::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1a8mafn::-moz-placeholder {
  opacity: 1;
}

.cache-1a8mafn:-ms-input-placeholder {
  opacity: 1;
}

.cache-1a8mafn::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-1a8mafn e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq1"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with height prop 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-1a8mafn {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1a8mafn::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn:hover,
.cache-1a8mafn:focus {
  border-color: #dbdbdf;
}

.cache-1a8mafn:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1a8mafn::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1a8mafn::-moz-placeholder {
  opacity: 1;
}

.cache-1a8mafn:-ms-input-placeholder {
  opacity: 1;
}

.cache-1a8mafn::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-1a8mafn e18bmnpq0"
        style="height: 90px;"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq1"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with notice 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-1a8mafn {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1a8mafn::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1a8mafn:hover,
.cache-1a8mafn:focus {
  border-color: #dbdbdf;
}

.cache-1a8mafn:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1a8mafn::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1a8mafn::-moz-placeholder {
  opacity: 1;
}

.cache-1a8mafn:-ms-input-placeholder {
  opacity: 1;
}

.cache-1a8mafn::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.cache-26qj9x {
  color: #b2b6c3;
  font-size: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-26qj9x.cache-26qj9x {
  margin-top: 8px;
}

.cache-1fnb4bm {
  fill: currentColor;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-1fnb4bm.cache-1fnb4bm {
  vertical-align: top;
  margin-right: 8px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-1a8mafn e18bmnpq0"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq1"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
    <div
      class="e1qg14600 cache-26qj9x e7ah3bn0"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-1fnb4bm e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
        />
      </svg>
      <div
        class="ejtitxs0 cache-11a6inf e7ah3bn0"
      >
        <p
          class="cache-11djngs e7ah3bn0"
        >
          <span
            class="cache-11djngs e7ah3bn0"
          >
            Test notice
          </span>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with null right component 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-ik4go1 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.cache-ik4go1::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-ik4go1::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-ik4go1:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-ik4go1::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-ik4go1:hover,
.cache-ik4go1:focus {
  border-color: #dbdbdf;
}

.cache-ik4go1:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-ik4go1::-webkit-input-placeholder {
  opacity: 1;
}

.cache-ik4go1::-moz-placeholder {
  opacity: 1;
}

.cache-ik4go1:-ms-input-placeholder {
  opacity: 1;
}

.cache-ik4go1::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-1htdcjt {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  -webkit-transform: translateY(8px);
  -moz-transform: translateY(8px);
  -ms-transform: translateY(8px);
  transform: translateY(8px);
  pointer-events: auto;
}

.cache-1htdcjt:hover,
.cache-1htdcjt:focus-within {
  color: #4a4f62;
}

.cache-1htdcjt>button {
  box-shadow: none!important;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-ik4go1 e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq1"
      >
        test
      </label>
      <div
        class="cache-1htdcjt e18bmnpq2"
      />
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with readOnly true 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-7dos13 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  background-color: #f6f5f7;
  border-color: #f6f5f7;
  color: #4a4f62;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-7dos13::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-7dos13::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-7dos13:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-7dos13::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-7dos13:hover,
.cache-7dos13:focus {
  border-color: #dbdbdf;
}

.cache-7dos13:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1h9ivvt {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  color: #b2b6c3;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-7dos13 e18bmnpq0"
        name="test"
        readonly=""
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1h9ivvt e18bmnpq1"
        readonly=""
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with unit is px 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-mmsc9t {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.cache-mmsc9t::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-mmsc9t::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-mmsc9t:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-mmsc9t::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-mmsc9t:hover,
.cache-mmsc9t:focus {
  border-color: #dbdbdf;
}

.cache-mmsc9t:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-vcqwsl {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  padding-top: 0;
  padding-bottom: 0;
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-vcqwsl:hover,
.cache-vcqwsl:focus-within {
  color: #4a4f62;
}

.cache-18iy4dy {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
  margin-right: 8px;
  margin-top: 1px;
  height: calc(100% - 2px);
  background-color: #d4dae7;
}

.cache-d8atl3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
}

.cache-d8atl3.cache-d8atl3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
  padding-top: 8px;
  padding-bottom: 8px;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-mmsc9t e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq1"
      >
        test
      </label>
      <div
        class="cache-vcqwsl e18bmnpq2"
      >
        <hr
          aria-orientation="vertical"
          class="e18bmnpq3 eoti1h20 cache-18iy4dy e7ah3bn0"
          role="separator"
        />
        <p
          class="e1g1zfwd0 cache-d8atl3 e7ah3bn0"
        >
          px
        </p>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with unit is px and required 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-ue76ck {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 22px;
}

.cache-ue76ck::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-ue76ck::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-ue76ck:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-ue76ck::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-ue76ck:hover,
.cache-ue76ck:focus {
  border-color: #dbdbdf;
}

.cache-ue76ck:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-vcqwsl {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  padding-top: 0;
  padding-bottom: 0;
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-vcqwsl:hover,
.cache-vcqwsl:focus-within {
  color: #4a4f62;
}

.cache-18iy4dy {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
  margin-right: 8px;
  margin-top: 1px;
  height: calc(100% - 2px);
  background-color: #d4dae7;
}

.cache-d8atl3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
}

.cache-d8atl3.cache-d8atl3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
  padding-top: 8px;
  padding-bottom: 8px;
}

.cache-1huqh94 {
  fill: #ef5774;
  height: 8px;
  width: 8px;
  min-width: 8px;
  min-height: 8px;
}

.cache-1huqh94.cache-1huqh94 {
  vertical-align: middle;
  margin-left: 2px;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-ue76ck e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq1"
      >
        test
      </label>
      <div
        class="cache-vcqwsl e18bmnpq2"
      >
        <hr
          aria-orientation="vertical"
          class="e18bmnpq3 eoti1h20 cache-18iy4dy e7ah3bn0"
          role="separator"
        />
        <p
          class="e1g1zfwd0 cache-d8atl3 e7ah3bn0"
        >
          px
          <svg
            class="sc-ui-icon etwatq50 cache-1huqh94 e7ah3bn0"
            viewBox="0 0 24 24"
          >
            <path
              d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
            />
          </svg>
        </p>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with valid false 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-1ukz7wy {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1ukz7wy::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1ukz7wy::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1ukz7wy:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1ukz7wy::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1ukz7wy:hover,
.cache-1ukz7wy:focus {
  border-color: #dbdbdf;
}

.cache-1ukz7wy:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-1ukz7wy e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq1"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with valid true 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-mmsc9t {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.cache-mmsc9t::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-mmsc9t::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-mmsc9t:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-mmsc9t::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-mmsc9t:hover,
.cache-mmsc9t:focus {
  border-color: #dbdbdf;
}

.cache-mmsc9t:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-4qbzvm {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
}

.cache-4qbzvm:hover,
.cache-4qbzvm:focus-within {
  color: #4a4f62;
}

.cache-1xh8xlv {
  fill: #45d6b5;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-1xh8xlv.cache-1xh8xlv {
  vertical-align: middle;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-mmsc9t e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq1"
      >
        test
      </label>
      <div
        class="cache-4qbzvm e18bmnpq2"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1xh8xlv e7ah3bn0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render multiline with props 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-639sap {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-top: 20px;
  height: 100%;
  resize: vertical;
  padding-top: 8px;
}

.cache-639sap::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-639sap::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-639sap:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-639sap::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-639sap:hover,
.cache-639sap:focus {
  border-color: #dbdbdf;
}

.cache-639sap:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-639sap::-webkit-input-placeholder {
  opacity: 1;
}

.cache-639sap::-moz-placeholder {
  opacity: 1;
}

.cache-639sap:-ms-input-placeholder {
  opacity: 1;
}

.cache-639sap::placeholder {
  opacity: 1;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <textarea
        autocomplete="on"
        class="cache-639sap e18bmnpq0"
        cols="50"
        rows="10"
      />
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render on focus 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-eskd0e {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-top: 20px;
  height: initial;
  resize: vertical;
}

.cache-eskd0e::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-eskd0e::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-eskd0e:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-eskd0e::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-eskd0e:hover,
.cache-eskd0e:focus {
  border-color: #dbdbdf;
}

.cache-eskd0e:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-eskd0e::-webkit-input-placeholder {
  opacity: 1;
}

.cache-eskd0e::-moz-placeholder {
  opacity: 1;
}

.cache-eskd0e:-ms-input-placeholder {
  opacity: 1;
}

.cache-eskd0e::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <textarea
        autocomplete="on"
        class="cache-eskd0e e18bmnpq0"
        cols="50"
        id="test"
        rows="10"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq1"
        for="test"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render random 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-1qatj6x {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.cache-1qatj6x::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1qatj6x::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1qatj6x:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1qatj6x::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1qatj6x:hover,
.cache-1qatj6x:focus {
  border-color: #dbdbdf;
}

.cache-1qatj6x:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1qatj6x::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1qatj6x::-moz-placeholder {
  opacity: 1;
}

.cache-1qatj6x:-ms-input-placeholder {
  opacity: 1;
}

.cache-1qatj6x::placeholder {
  opacity: 1;
}

.cache-3ej5ou {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.cache-3ej5ou:hover,
.cache-3ej5ou:focus-within {
  color: #4a4f62;
}

.cache-3ej5ou>button {
  box-shadow: none!important;
}

.cache-cq3faf {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-cq3faf[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-cq3faf[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1xppsrc {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1xppsrc.cache-1xppsrc {
  vertical-align: middle;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-1qatj6x e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <div
        class="cache-3ej5ou e18bmnpq2"
      >
        <button
          aria-disabled="false"
          class="e1kgqxfn0 cache-cq3faf e7ah3bn0"
          title="Randomize"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-1xppsrc e7ah3bn0"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render random 2`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-sariqg {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #fafafb;
  border-color: #fafafb;
  color: #d4dae7;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.cache-sariqg::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-sariqg::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-sariqg:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-sariqg::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-sariqg:hover,
.cache-sariqg:focus {
  border-color: #dbdbdf;
}

.cache-sariqg:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1s4sa9c {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  color: #d4dae7;
}

.cache-3ej5ou {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.cache-3ej5ou:hover,
.cache-3ej5ou:focus-within {
  color: #4a4f62;
}

.cache-3ej5ou>button {
  box-shadow: none!important;
}

.cache-cq3faf {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-cq3faf[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-cq3faf[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1xppsrc {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1xppsrc.cache-1xppsrc {
  vertical-align: middle;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-sariqg e18bmnpq0"
        disabled=""
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1s4sa9c e18bmnpq1"
        disabled=""
      >
        test
      </label>
      <div
        class="cache-3ej5ou e18bmnpq2"
      >
        <button
          aria-disabled="true"
          class="e1kgqxfn0 cache-cq3faf e7ah3bn0"
          disabled=""
          title="Randomize"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-1xppsrc e7ah3bn0"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render toggleable password 1`] = `
<DocumentFragment>
  .cache-zkzsno.cache-zkzsno {
  position: relative;
}

.cache-1qatj6x {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.cache-1qatj6x::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1qatj6x::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1qatj6x:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1qatj6x::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1qatj6x:hover,
.cache-1qatj6x:focus {
  border-color: #dbdbdf;
}

.cache-1qatj6x:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1qatj6x::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1qatj6x::-moz-placeholder {
  opacity: 1;
}

.cache-1qatj6x:-ms-input-placeholder {
  opacity: 1;
}

.cache-1qatj6x::placeholder {
  opacity: 1;
}

.cache-3ej5ou {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.cache-3ej5ou:hover,
.cache-3ej5ou:focus-within {
  color: #4a4f62;
}

.cache-3ej5ou>button {
  box-shadow: none!important;
}

.cache-cq3faf {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-cq3faf[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-cq3faf[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1xppsrc {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1xppsrc.cache-1xppsrc {
  vertical-align: middle;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1jgvrmi.cache-1jgvrmi {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-zkzsno e7ah3bn0"
    >
      <input
        autocomplete="on"
        class="cache-1qatj6x e18bmnpq0"
        name="password"
        type="password"
        value=""
      />
      <div
        class="cache-3ej5ou e18bmnpq2"
      >
        <button
          aria-disabled="false"
          class="e1kgqxfn0 cache-cq3faf e7ah3bn0"
          title="Show"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-1xppsrc e7ah3bn0"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C17,19.5 21.27,16.39 23,12C21.27,7.61 17,4.5 12,4.5Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1jgvrmi e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;
